--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,13 +1,35 @@
-name: Publish Docker
-on: [push]
+name: Build and Push Docker Image
+on: 
+  workflow_dispatch: #手动触发工作流
+   inputs:
+    repository:
+        description: 'pgyapp/notionnext'
+        required: true
+        type: string
+    name:
+        description: 'pgyapp/notionnext:latest'
+        required: true
+        type: string
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v3
-    - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@v5
+    - name: 签出目标仓库
+      uses: actions/checkout@v3
       with:
-        name: pgyapp/notionnext
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+         repository: ${{ inputs.repository }}
+         
+    - name: 登录DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        
+    - name: 制作镜像并上传
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: ${{ inputs.name }}
