--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,35 +1,15 @@
-name: Build and Push Docker Image
-on: 
-  workflow_dispatch: #手动触发工作流
-   inputs:
-    repository:
-        description: '目标仓库'
-        required: true
-        type: string
-    name:
-        description: '镜像名称'
-        required: true
-        type: string
-
+name: Build Docker Image
+on:
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: 签出目标仓库
-      uses: actions/checkout@v3
-      with:
-         repository: ${{ inputs.repository }}
-         
-    - name: 登录DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        
-    - name: 制作镜像并上传
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        tags: ${{ inputs.name }}
+      - uses: actions/checkout@master
+      - name: Building Docker Image
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          # 下方的name格式为：Docker Hub ID/自定义镜像名称
+          name: pgyapp/notionnext
+          username: '${{ secrets.DOCKER_USERNAME }}'
+          password: '${{ secrets.DOCKER_PASSWORD }}'
